unpackaged/main/default/objects/Cancellation__c/Cancellation__c.object-meta.xml
<CustomObject>
    <label>Cancellation</label>
    <nameField>
        <label>Cancellation Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>