unpackaged/main/default/objects/Cancellation__c/fields/CancellationLetterSend__c.field-meta.xml
<CustomField>
    <fullName>CancellationLetterSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Letter Send ?</label>
    <type>Checkbox</type>
</CustomField>