unpackaged/main/default/objects/Cancellation__c/fields/CreditNote__c.field-meta.xml
<CustomField>
    <fullName>CreditNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>CreditNote__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>