unpackaged/main/default/objects/Cancellation__c/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Request</label>
    <referenceTo>CustomerRequest__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>