unpackaged/main/default/objects/Cancellation__c/fields/MRR_New__c.field-meta.xml
<CustomField>
    <fullName>MRR_New__c</fullName>
    <label>MRR New</label>
    <summarizedField>CancellationLine__c.MRR_New__c</summarizedField>
    <summaryForeignKey>CancellationLine__c.Cancellation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>